src/Test/Fixtures/Good/Arrays/zeroLengthQubitArrayDeclaration.lf
let qubits : [qubit; 0] = [];
