src/Test/Fixtures/Bad/BitQubit/unexpectedSecondBitLiteralInDeclaration.lf
let singleBit : bit = 0 1;